fix: make layout more fixed and move nav to top on mobile

--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -1,5 +1,5 @@
 nav.menu {
-    padding: 24px 48px;
+    padding: calc(var(--main-padding) - 12px) var(--main-padding);
     line-height: 22px;
     white-space: nowrap;
     grid-area: nav;
@@ -118,12 +118,14 @@ nav .site-nav ul li {
 
 
 @media only screen and (max-width: 1100px) {
-    nav.menu ul {
-        width: 100%;
+    nav.menu {
+        padding: 4.5% 4.5%;
     }
 
-    nav.menu li {
-        padding: 8px;
+    nav.menu ul {
+        width: 100%;
+        row-gap: 4px;
+        column-gap: 4px;
     }
 
     nav .site-nav section {
